[EJBCLIENT-438] At the pom, remove the org.wildfly.ee.namespace.interop setting from plugin config and instead create a new profile that runs surefire tests with that property enabled (#561)
Signed-off-by: Flavia Rainone <frainone@redhat.com>